# CodeBot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
apps/server/: alembic.ini  package.json  pyproject.toml
apps/server/migrations/: env.py
apps/server/migrations/versions/: 68239facb43f_initial_schema.py  ea394e8a966d_add_soc2_audit_fields.py  f14fd817f2da_add_project_settings_history_table.py
apps/server/src/codebot/: __init__.py  config.py  main.py
apps/server/src/codebot/agent_config/: __init__.py  loader.py
apps/server/src/codebot/agents/: __init__.py  accessibility.py  api_designer.py  architect.py  backend_dev.py  brainstorming.py  code_reviewer.py  collaboration_manager.py  database_designer.py  debugger.py  designer.py  devops.py  doc_writer.py  frontend_dev.py  github_agent.py  hooks_creator.py  hooks_creator_agent.py  i18n_l10n.py  infra_engineer.py  integrations.py  middleware_dev.py  mobile_dev.py  orchestrator.py  performance.py  planner.py  project_manager.py  registry.py  researcher.py  security_auditor.py  skill_creator.py  skill_creator_agent.py  techstack_builder.py  template_curator.py  tester.py  tools_creator.py  tools_creator_agent.py
apps/server/src/codebot/api/: __init__.py  deps.py  envelope.py  middleware.py
apps/server/src/codebot/api/routes/: __init__.py  agents.py  auth.py  brainstorm.py  health.py  pipelines.py  projects.py
apps/server/src/codebot/api/schemas/: __init__.py  agents.py  auth.py  brainstorm.py  common.py  pipelines.py  projects.py
apps/server/src/codebot/auth/: __init__.py  api_key.py  jwt.py  password.py
apps/server/src/codebot/cli_agents/: __init__.py  health.py  models.py  output_parser.py  runner.py  session.py
apps/server/src/codebot/context/: __init__.py  adapter.py  budget.py  code_indexer.py  compressor.py  models.py  tiers.py  vector_store.py
apps/server/src/codebot/db/: __init__.py  engine.py
apps/server/src/codebot/debug/: analyzer.py  fixer.py  loop_controller.py
apps/server/src/codebot/events/: __init__.py  bus.py
apps/server/src/codebot/hooks/: models.py  service.py
apps/server/src/codebot/input/: __init__.py  clarifier.py  extractor.py  models.py
apps/server/src/codebot/llm/: __init__.py  budget.py  callbacks.py  config.py  estimator.py  exceptions.py  fallback.py  providers.py  router.py  schemas.py  service.py
apps/server/src/codebot/pipeline/: __init__.py  activities.py  checkpoint.py  event_emitter.py  events.py  gates.py  loader.py  models.py  project_detector.py  registry.py  vertical_slice.py  worker.py  workflows.py
apps/server/src/codebot/security/: __init__.py  audit.py  config.py  gate.py  models.py  orchestrator.py
apps/server/src/codebot/services/: __init__.py  agent_service.py  auth_service.py  brainstorm_service.py  pipeline_service.py  project_service.py
apps/server/src/codebot/skills/: models.py  service.py
apps/server/src/codebot/testing/: parser.py  runner.py
apps/server/src/codebot/tools/: registry.py  service.py
apps/server/src/codebot/websocket/: bridge.py  manager.py
apps/server/src/codebot/worktree/: __init__.py  branch_strategy.py  commit_manager.py  models.py  pool.py  port_allocator.py
apps/server/tests/: __init__.py  conftest.py  test_agent_loader.py  test_db.py  test_events.py  test_models.py
apps/server/tests/api/: __init__.py  conftest.py  test_agents.py  test_auth.py  test_brainstorm.py  test_pipelines.py  test_projects.py
apps/server/tests/integration/: test_parallel_worktrees.py  test_security_pipeline.py  test_worktree_docker.py
apps/server/tests/integration/context/: conftest.py  test_vector_search.py
apps/server/tests/unit/: test_allowlist.py  test_audit_logger.py  test_branch_strategy.py  test_cli_agents.py  test_compliance_checker.py  test_port_allocator.py  test_security_gate.py  test_security_gitleaks.py  test_security_orchestrator.py  test_security_semgrep.py  test_security_trivy.py  test_worktree_pool.py
apps/server/tests/unit/agents/: test_hooks_creator.py  test_skill_creator.py  test_tools_creator.py
apps/server/tests/unit/context/: conftest.py  test_adapter.py  test_budget.py  test_code_indexer.py  test_compressor.py  test_tiers.py  test_vector_store.py
apps/server/tests/unit/llm/: conftest.py  test_budget.py  test_config.py  test_estimator.py  test_fallback.py  test_router.py  test_schemas.py  test_service.py
apps/server/tests/unit/pipeline/: test_events.py
apps/server/tests/websocket/: test_bridge.py  test_chat_attachments.py  test_manager.py
docs/: chat.md  (+1 more)
libs/agent-sdk/: package.json  pyproject.toml
libs/agent-sdk/src/agent_sdk/: __init__.py
libs/agent-sdk/src/agent_sdk/agents/: __init__.py  base.py  metrics.py  protocols.py  recovery.py  state_machine.py
libs/agent-sdk/src/agent_sdk/models/: __init__.py  agent.py  agent_config.py  enums.py  events.py  pipeline.py  project.py  project_settings.py  task.py
libs/agent-sdk/tests/: conftest.py  test_agent_config.py  test_base_agent.py  test_metrics.py  test_recovery.py  test_state_machine.py
libs/graph-engine/: package.json  pyproject.toml
libs/graph-engine/src/graph_engine/: __init__.py
libs/graph-engine/src/graph_engine/engine/: __init__.py  checkpoint.py  compiler.py  executor.py  fanout.py  validator.py
libs/graph-engine/src/graph_engine/models/: __init__.py  edge_types.py  execution.py  graph_def.py  node_types.py  state.py
libs/graph-engine/src/graph_engine/nodes/: __init__.py  agent_node.py
libs/graph-engine/src/graph_engine/tracing/: __init__.py  tracer.py
libs/graph-engine/src/graph_engine/yaml/: __init__.py  loader.py
libs/graph-engine/tests/: conftest.py  test_agent_node.py  test_checkpoint.py  test_compiler.py  test_executor.py  test_fanout.py  test_models.py  test_tracer.py  test_validator.py  test_yaml_loader.py
libs/graph-engine/tests/fixtures/: cyclic_graph.yaml  fanout_pipeline.yaml  invalid_refs.yaml  parallel_pipeline.yaml  simple_pipeline.yaml  switch_pipeline.yaml
(+398 files in other folders)
