[project]
name = "codebot"
version = "0.1.0"
description = "Multi-agent autonomous software development platform"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Agent Orchestration
    "langgraph>=0.2.0",
    "temporalio>=1.7.0",

    # LLM Gateway
    "litellm>=1.50.0",

    # MCP Framework
    "fastmcp>=2.0.0",

    # Event Bus & Task Queue
    "nats-py>=2.9.0",
    "taskiq>=0.11.0",
    "taskiq-nats>=0.4.0",

    # Vector Database
    "lancedb>=0.13.0",
    "qdrant-client>=1.12.0",

    # RAG & Embeddings
    "llama-index>=0.11.0",

    # Code Analysis
    "tree-sitter>=0.23.0",

    # Database
    "sqlalchemy>=2.0.35",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",

    # Observability
    "langfuse>=2.50.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",

    # Plugins & Templates
    "pluggy>=1.5.0",
    "copier>=9.4.0",

    # Notifications
    "apprise>=1.9.0",

    # Git Operations
    "gitpython>=3.1.43",

    # Security
    "pyjwt[crypto]>=2.9.0",

    # Utilities
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "promptfoo>=0.1.0",
]
security = [
    "semgrep>=1.90.0",
    "bandit>=1.8.0",
    "pip-audit>=2.7.0",
    "cyclonedx-bom>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/server/src/codebot"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
