[project]
name = "codebot-workspace"
version = "0.1.0"
description = "CodeBot monorepo root — Python workspace config"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "apps/server",
    "libs/agent-sdk",
    "libs/graph-engine",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
