[project]
name = "codebot-server"
version = "0.1.0"
description = "CodeBot FastAPI backend server"
requires-python = ">=3.12"

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Validation & Settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Event Bus
    "nats-py>=2.9.0",

    # Cache
    "redis[hiredis]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebot"]
