[project]
name = "codebot-server"
version = "0.1.0"
description = "CodeBot FastAPI backend server"
requires-python = ">=3.12"

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Validation & Settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Event Bus
    "nats-py>=2.9.0",

    # Cache
    "redis[hiredis]>=5.0.0",

    # Context Management
    "tiktoken>=0.12.0",
    "aiofiles>=25.1.0",

    # Vector Store
    "lancedb>=0.30.0",
    "qdrant-client>=1.17.0",
    "sentence-transformers>=5.3.0",

    # Code Indexing (Tree-sitter)
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.23.0",

    # LLM Abstraction
    "litellm>=1.82.0",
    "langfuse>=2.0.0",
    "pyyaml>=6.0.0",

    # Agent SDK
    "agent-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.uv.sources]
agent-sdk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "types-aiofiles>=25.1.0.20251011",
    "types-pyyaml>=6.0.12.20250915",
]
