[project]
name = "agent-sdk"
version = "0.1.0"
description = "CodeBot agent SDK — base classes and shared Pydantic models"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sdk"]
