[project]
name = "graph-engine"
version = "0.1.0"
description = "CodeBot graph execution engine"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "langgraph>=1.1.0,<2.0",
    "langgraph-checkpoint-postgres==3.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
